test_regress/t/t_notiming.out
%Warning-STMTDLY: t/t_notiming.v:12:6: Ignoring delay on this statement due to --no-timing
                                     : ... note: In instance 't'
   12 |      #1
      |      ^
                  ... For warning description see https://verilator.org/warn/STMTDLY?v=latest
                  ... Use "/* verilator lint_off STMTDLY */" and lint_on around source to disable this message.
%Error-NOTIMING: t/t_notiming.v:13:6: Fork statements require --timing
                                    : ... note: In instance 't'
   13 |      fork @e; @e; join;
      |      ^~~~
                 ... For error description see https://verilator.org/warn/NOTIMING?v=latest
%Error-NOTIMING: t/t_notiming.v:14:6: Event control statement in this location requires --timing
                                    : ... note: In instance 't'
                                    : ... With --no-timing, suggest have one event control statement per procedure, at the top of the procedure
   14 |      @e
      |      ^
%Error-NOTIMING: t/t_notiming.v:15:6: Wait statements require --timing
                                    : ... note: In instance 't'
   15 |      wait(x == 4)
      |      ^~~~
%Error-NOTIMING: t/t_notiming.v:19:6: Event control statement in this location requires --timing
                                    : ... note: In instance 't'
                                    : ... With --no-timing, suggest have one event control statement per procedure, at the top of the procedure
   19 |      @e
      |      ^
%Warning-STMTDLY: t/t_notiming.v:26:11: Ignoring delay on this statement due to --no-timing
                                      : ... note: In instance 't'
   26 |   initial #1 ->e;
      |           ^
%Warning-STMTDLY: t/t_notiming.v:27:11: Ignoring delay on this statement due to --no-timing
                                      : ... note: In instance 't'
   27 |   initial #2 $stop;  
      |           ^
%Error-NOTIMING: t/t_notiming.v:33:10: mailbox::put() requires --timing
                                     : ... note: In instance 't'
   33 |        m.put(i);
      |          ^~~
%Error-NOTIMING: t/t_notiming.v:34:10: mailbox::get() requires --timing
                                     : ... note: In instance 't'
   34 |        m.get(i);
      |          ^~~
%Error-NOTIMING: t/t_notiming.v:35:10: mailbox::peek() requires --timing
                                     : ... note: In instance 't'
   35 |        m.peek(i);
      |          ^~~~
%Error-NOTIMING: t/t_notiming.v:36:10: semaphore::get() requires --timing
                                     : ... note: In instance 't'
   36 |        s.get();
      |          ^~~
%Error-NOTIMING: t/t_notiming.v:38:26: s_eventually requires --timing
                                     : ... note: In instance 't'
   38 |    assert property (@(e) s_eventually 1'h1);
      |                          ^~~~~~~~~~~~
%Error: Exiting due to
